<resources>
    <string name="app_name">Location Reminders</string>
    <string name="no_data">No Data</string>
    <string name="reminder_title">Reminder Title</string>
    <string name="reminder_desc">Description</string>
    <string name="reminder_location">Reminder Location</string>
    <string name="reminder_saved">Reminder Saved !</string>
    <string name="logout">Logout</string>
    <string name="welcome_to_the_location_reminder_app">Welcome to the location reminder app</string>
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="err_enter_title">Please enter title</string>
    <string name="err_enter_description">Please enter description</string>
    <string name="err_select_location">Please select location</string>
    <string name="save">Save</string>
    <string name="save_location">Save Location</string>
    <string name="save_user_location">SAVE</string>
    <string name="clearlist">ClearList</string>

    <!-- Error strings -->
</resources>
